# marshmallow_demos

./: CMakeLists.txt  config.h.in
angrymallows/: CMakeLists.txt  customfactory.cpp  customfactory.h  game.cpp  game.h  inputcomponent.cpp  inputcomponent.h  main.cpp  snatchcomponent.cpp  snatchcomponent.h  snatcherlayer.cpp  snatcherlayer.h
angrymallows/assets/: angrymallows_default.xml
common/: actorentity.cpp  actorentity.h  colliderentity.cpp  colliderentity.h  deathevent.cpp  deathevent.h  doomevent.cpp  doomevent.h  warpevent.cpp  warpevent.h
engine/: CMakeLists.txt  demo0.cpp
platformer/: CMakeLists.txt  actorcollidercomponent.cpp  actorcollidercomponent.h  customfactory.cpp  customfactory.h  demo.cpp  demo.h  demo0.cpp  inputcomponent.cpp  inputcomponent.h  main.cpp  playerentity.cpp  playerentity.h
pong/: CMakeLists.txt  aicomponent.cpp  aicomponent.h  ballbounceevent.cpp  ballbounceevent.h  ballcollider.cpp  ballcollider.h  demoengine.cpp  demoengine.h  demoscene.cpp  demoscene.h  inputcomponent.cpp  inputcomponent.h  main.cpp  pongball.cpp  pongball.h  pongcourt.cpp  pongcourt.h  ponglayer.cpp  ponglayer.h  pongpaddle.cpp  pongpaddle.h  pongscene.cpp  pongscene.h  pongscore.cpp  pongscore.h  pongwall.cpp  pongwall.h  scoreevent.cpp  scoreevent.h
tilemap/: CMakeLists.txt  colliderentity.cpp  colliderentity.h  customfactory.cpp  customfactory.h  demo0.cpp  demo1.cpp  demo2.cpp  inputcomponent.cpp  inputcomponent.h  playerentity.cpp  playerentity.h
tilemap/assets/: tilemap_sewers.tmx
